force-app/main/default/objects/Analytics_Trial_Task__c/Analytics_Trial_Task__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Analytics Trial Task</label>
</CustomObject>