force-app/main/default/objects/Analytics_Trial_Task__c/fields/Actionable_Link__c.field-meta.xml
<CustomField>
    <fullName>Actionable_Link__c</fullName>
    <label>Actionable Link</label>
    <type>Url</type>
</CustomField>