force-app/main/default/objects/Analytics_Trial_Task__c/fields/Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Task_Order__c</fullName>
    <label>Task Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>