force-app/main/default/objects/Analytics_Trial_Task__c/fields/Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Task_Title__c</fullName>
    <label>Task Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>